--- a/lab1/lab1_debugging/lab1.ipynb
+++ b/lab1/lab1_debugging/lab1.ipynb
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is connected to the power rail because we need it to have a reference voltage."
+    "1.65V"
    ]
   },
   {
@@ -237,7 +237,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "-1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -250,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can change the resistance of the circuit."
+    "You can change the resistance of the 20k resistor."
    ]
   },
   {
@@ -266,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "LED1 stays lit and R2 turns off (no sign wave)"
+    "They blink at the same time"
    ]
   },
   {
@@ -294,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The R2 LED is always turned on but the other LED blinks"
+    "R2 blinks brighter"
    ]
   },
   {
@@ -308,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Same as (c)"
+    "Nothing changes"
    ]
   },
   {
